--- a/.gitignore
+++ b/.gitignore
@@ -23,4 +23,4 @@ Frontend/node_modules/
 Backend/__pycache__/
 Backend/venv/
 Backend/models/custom_ner_model/vocab/
-
+Backend/**/.ipynb_checkpoints/
